--- a/scss/style.scss
+++ b/scss/style.scss
@@ -372,10 +372,12 @@ body {
         line-height: 35px;
     }
     .p-carrousel-container {
-        height: 100%;
+        height: 374px;
+        margin-bottom: 26px;
         width: 1240px;
         display: flex;
         position: relative;
+
         // overflow: hidden;
         //background-color: red;
         .p-slier {
@@ -385,20 +387,22 @@ body {
             gap: 19px;
             padding-left: 1.4px;
             img {
-                height: 316px;
+                height: 100%;
                 width: 295px;
                 object-fit: cover;
-                margin-bottom: 13px;
+
                 border: 1px solid rgba(black, 0.05);
             }
             .p-slide {
                 display: flex;
                 flex-direction: column;
                 align-items: center;
-                height: 373px;
+                height: 100%;
 
                 .p-img {
                     position: relative;
+                    height: 316px;
+                    margin-bottom: 13px;
                     .badge {
                         background-color: #f7754c;
                         border-radius: 50%;
@@ -407,7 +411,7 @@ body {
                         height: 50px;
                         text-align: center;
                         position: absolute;
-                        bottom: 15px;
+                        bottom: -2px;
                         right: -2px;
 
                         span {
@@ -484,12 +488,14 @@ body {
         line-height: 35px;
     }
     .p-carrousel-container {
-        height: 100%;
+        height: 374px;
+        margin-bottom: 26px;
         width: 1240px;
         display: flex;
         position: relative;
-        /* overflow: hidden; */
 
+        // overflow: hidden;
+        //background-color: red;
         .p-slier {
             width: 100%;
             height: 100%;
@@ -497,19 +503,21 @@ body {
             gap: 19px;
             padding-left: 1.4px;
             img {
-                height: 316px;
+                height: 100%;
                 width: 295px;
                 object-fit: cover;
-                margin-bottom: 13px;
+
                 border: 1px solid rgba(black, 0.05);
             }
             .p-slide {
                 display: flex;
                 flex-direction: column;
                 align-items: center;
-                height: 373px;
+                height: 100%;
                 .p-img {
                     position: relative;
+                    height: 316px;
+                    margin-bottom: 13px;
                     .badge {
                         background-color: #f7754c;
                         border-radius: 50%;
@@ -518,7 +526,7 @@ body {
                         height: 50px;
                         text-align: center;
                         position: absolute;
-                        bottom: 15px;
+                        bottom: -2px;
                         right: -2px;
 
                         span {
@@ -530,6 +538,7 @@ body {
                         }
                     }
                 }
+
                 .infos {
                     display: flex;
                     flex-direction: column;
@@ -580,8 +589,8 @@ body {
 }
 // DISCOUNTS \\
 .discount {
-    margin-top: 60px;
-    height: 508px;
+    margin-top: 47px;
+    height: 528px;
     width: 1240px;
     display: flex;
     flex-direction: column;
@@ -595,12 +604,14 @@ body {
         line-height: 35px;
     }
     .p-carrousel-container {
-        height: 100%;
+        height: 400px;
+        margin-bottom: 20px;
         width: 1240px;
         display: flex;
         position: relative;
-        /* overflow: hidden; */
 
+        // overflow: hidden;
+        //background-color: red;
         .p-slier {
             width: 100%;
             height: 100%;
@@ -611,36 +622,16 @@ body {
                 height: 316px;
                 width: 295px;
                 object-fit: cover;
-                margin-bottom: 13px;
+
                 border: 1px solid rgba(black, 0.05);
+                margin-bottom: 13px;
             }
             .p-slide {
                 display: flex;
                 flex-direction: column;
                 align-items: center;
-                height: 373px;
-                .p-img {
-                    position: relative;
-                    .badge {
-                        background-color: #f7754c;
-                        border-radius: 50%;
-                        padding: 14px 0;
-                        width: 50px;
-                        height: 50px;
-                        text-align: center;
-                        position: absolute;
-                        bottom: 15px;
-                        right: -2px;
+                height: 100%;
 
-                        span {
-                            font-style: normal;
-                            font-weight: bold;
-                            font-size: 13px;
-                            line-height: 15px;
-                            color: white;
-                        }
-                    }
-                }
                 .infos {
                     display: flex;
                     flex-direction: column;
@@ -652,6 +643,9 @@ body {
                         font-size: 16px;
                         line-height: 19px;
                     }
+                    .current-price{
+                        color: red;
+                    }
                     h3 {
                         font-style: normal;
                         font-weight: normal;
@@ -659,13 +653,6 @@ body {
                         line-height: 23px;
 
                         color: #929292;
-                    }
-                    .ancient-price {
-                        font-style: normal;
-                        font-weight: normal;
-                        font-size: 16px;
-                        line-height: 19px;
-                        text-decoration: line-through;
                     }
                 }
             }
@@ -696,6 +683,7 @@ body {
         }
     }
 }
+// BANNER\\
 .banner {
     width: 1240px;
     height: 178px;
@@ -743,7 +731,7 @@ body {
         ul {
             display: flex;
             align-items: center;
-            gap: 29.5px;
+            gap: 13px;
             width: 100%;
             justify-content: flex-end;
             margin-right: -20px;
